--- a/cda/templates/cda/mi_reporte_pdf.html
+++ b/cda/templates/cda/mi_reporte_pdf.html
@@ -29,7 +29,7 @@
 <body>
     <h1>Reporte para {{ usuario.username }}</h1>
     <p>Este PDF fue generado con <strong>wkhtmltopdf</strong> desde Django.</p>
-    <p>Fecha de generación: {{ now|date:"d/m/Y H:i" }}</p>
+    <p>Fecha de generación: {{ now|date:"d/m/Y h:i A" }}</p>
 
     <div class="footer">
         <p>© Tecnic-CDA | Reporte generado automáticamente</p>
