Mostrar fecha de generación en formato 12 horas con AM/PM en PDF

--- a/cda/templates/cda/placa_pdf.html
+++ b/cda/templates/cda/placa_pdf.html
@@ -337,7 +337,8 @@
                 </div>
                 <div class="footer-item">
                     <strong>Fecha de generación:</strong><br>
-                    {% now "d/m/Y H:i" %}
+                    {% now "d/m/Y h:i A" %}
+
                 </div>
                 <div class="footer-item">
                     <strong>Sistema:</strong><br>
