Mostrar hora de creación de fotos en formato 12 horas con AM/PM

--- a/cda/templates/cda/agregar_fotos.html
+++ b/cda/templates/cda/agregar_fotos.html
@@ -119,7 +119,8 @@
                                         </span>
                                     </p>
                                     <small class="text-muted">
-                                        <i class="bi bi-clock"></i> {{ foto.fecha_creacion|date:"d/m/Y H:i" }}
+                                       <i class="bi bi-clock"></i> {{ foto.fecha_creacion|date:"d/m/Y h:i A" }}
+
                                     </small>
                                 </div>
                             </div>
